--- a/Great America May Monthly Analysis.ipynb
+++ b/Great America May Monthly Analysis.ipynb
@@ -232,8 +232,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So 90 of the 125 itemized contributions in this filing contain not "
+    "So 90 of the 125 itemized contributions in this filing contain no employer or occupation information about the donors. In percentage terms, that's: "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (90.0/125.0)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
